syntax = "proto3";

package payment;

option go_package = "github.com/tkaewplik/go-microservices/proto/payment";

import "google/protobuf/timestamp.proto";

// PaymentService provides payment operations
service PaymentService {
  // CreateTransaction creates a new transaction
  rpc CreateTransaction(CreateTransactionRequest) returns (Transaction);
  // GetTransactions returns all transactions for a user
  rpc GetTransactions(GetTransactionsRequest) returns (TransactionList);
  // PayAllTransactions marks all unpaid transactions as paid
  rpc PayAllTransactions(PayRequest) returns (PayResponse);
}

message CreateTransactionRequest {
  int32 user_id = 1;
  double amount = 2;
  string description = 3;
}

message GetTransactionsRequest {
  int32 user_id = 1;
}

message PayRequest {
  int32 user_id = 1;
}

message Transaction {
  int32 id = 1;
  int32 user_id = 2;
  double amount = 3;
  string description = 4;
  bool is_paid = 5;
  google.protobuf.Timestamp created_at = 6;
}

message TransactionList {
  repeated Transaction transactions = 1;
}

message PayResponse {
  string message = 1;
  int64 transactions_paid = 2;
}
